Addition of ARM A64 vistior